# paytime

./: LICENSE  README.md  stack.yaml
.stack-work/install/x86_64-linux/lts-3.18/7.10.2/flag-cache/: paytime-0.1.0.0-316c2eb056085a89f37571c714f9cba5
.stack-work/install/x86_64-linux/lts-3.18/7.10.2/pkgdb/: package.cache  paytime-0.1.0.0-316c2eb056085a89f37571c714f9cba5.conf  paytime-0.1.0.0-b5e83b501fda034916fb1b5892c7ba8e.conf
paytime/: LICENSE  paytime.cabal
paytime/app/: Main.hs
paytime/src/: Lib.hs
