name:                paytime
version:             0.1.0.0
synopsis:            A accountance programm made in Haskell
description:         Please see README.md
homepage:            http://github.com/rwobben/paytime#readme
license:             BSD3
license-file:        LICENSE
author:              R. Wobben
maintainer:          r.wobben@home.nl
copyright:           2015 R. Wobben
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable paytime-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , paytime
  default-language:    Haskell2010

test-suite paytime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , paytime
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rwobben/paytime
